# django-snacks

./: db.sqlite3  pyproject.toml  readme.md
django_snacks/: settings.py  urls.py
snacks/: tests.py  urls.py
templates/: about.html  base.html  home.html
